<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RandomWordActivity">

    <TextView
        android:id="@+id/random_word_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/random_word_activity_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/random_word_activity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/random_word_activity_description"
        android:textAlignment="gravity"
        android:textColor="@color/gray_3"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_word_activity_title" />


    <TextView
        android:id="@+id/random_word_activity_the_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/random_word_mock_word"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_word_activity_description" />

    <EditText
        android:id="@+id/random_word_activity_translate"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:hint="@string/random_word_activity_translate"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_word_activity_the_word" />

    <TextView
        android:id="@+id/random_activity_send_btn"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/random_word_activity_send"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@+id/random_word_activity_translate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/actions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/random_activity_send_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/random_word_activity_hint"
            android:id="@+id/random_word_activity_hint_btn"
            android:background="@drawable/button_yl"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/random_word_activity_skip"
            android:id="@+id/random_word_activity_skip_btn"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_rd"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/random_activity_home_btn"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:text="@string/random_word_activity_home"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_gr"
        app:layout_constraintTop_toBottomOf="@+id/actions_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/main_activity_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_3"
        android:text="@string/main_activity_bottom"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/random_activity_home_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>