<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DictionaryActivity">

    <TextView
        android:id="@+id/dictionary_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/dictionary_activity_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dictionary_activity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/dictionary_activity_description"
        android:textAlignment="gravity"
        android:textColor="@color/gray_3"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_title" />

    <LinearLayout
        android:id="@+id/dictionary_activity_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_description"  >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dictionary_activity_head_word"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/dictionary_item_word_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dictionary_activity_head_translate"
            android:layout_marginStart="5dp" />

        <!--правильно переведено раз-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dictionary_activity_head_ok"
            android:layout_marginStart="5dp" />

        <!--переведено с ошибками раз-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dictionary_activity_head_err"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/dictionary_item_word_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dictionary_activity_delete"
            android:layout_marginStart="5dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dictionary_activity_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_linear_layout"        />

    <EditText
        android:id="@+id/dictionary_activity_add_word_edit"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:hint="@string/dictionary_activity_add_word_hint"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_recycler_view" />

    <TextView
        android:id="@+id/dictionary_activity_add_word_btn"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/dictionary_activity_add_word"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_add_word_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dictionary_activity_home_btn"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/random_word_activity_home"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_gr"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_activity_add_word_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dictionary_activity_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_3"
        android:text="@string/main_activity_bottom"
        android:textSize="16sp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

