<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReqresActivity">

    <LinearLayout
        android:id="@+id/reqres_activity_get_layot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="145dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@+id/reqres_activity_put_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="145dp">

    <TextView
        android:id="@+id/reqres_activity_head_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/reqres_head_get"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reqres_activity_get_users_list"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_list_users"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_head_get"/>

    <TextView
        android:id="@+id/reqres_activity_get_single_user"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_single_user"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_users_list"/>

    <TextView
        android:id="@+id/reqres_activity_get_single_user_err"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_single_user_err"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_single_user"/>

    <TextView
        android:id="@+id/reqres_activity_get_resources_list"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_resources_list"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_single_user_err"/>

    <TextView
        android:id="@+id/reqres_activity_get_single_resource"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_single_resource"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_resources_list"/>

    <TextView
        android:id="@+id/reqres_activity_get_single_resource_err"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_single_resource_err"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_single_resource"/>

    <TextView
        android:id="@+id/reqres_activity_get_users_list_delay"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_list_users_delay"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_single_resource_err"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/reqres_activity_put_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="145dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf= "@+id/reqres_activity_get_layot"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="145dp">

    <TextView
        android:id="@+id/reqres_activity_head_put"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/reqres_head_post"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reqres_activity_post_create_user"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_post_create"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_get_single_resource_err"/>

    <TextView
        android:id="@+id/reqres_activity_post_update_user"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_put_update"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_post_create_user"/>

    <TextView
        android:id="@+id/reqres_activity_patch_update_user"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_patch_update"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_post_create_user"/>

    <TextView
        android:id="@+id/reqres_activity_delete"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/reqres_delete"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqres_activity_patch_update_user"/>

        <TextView
            android:id="@+id/reqres_activity_register_ok"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/reqres_register_ok"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:layout_gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqres_activity_delete"/>

        <TextView
            android:id="@+id/reqres_activity_register_err"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/reqres_register_err"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:layout_gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqres_activity_register_ok"/>

        <TextView
            android:id="@+id/reqres_activity_login_ok"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/reqres_login_ok"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:layout_gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqres_activity_register_err"/>

        <TextView
            android:id="@+id/reqres_activity_login_err"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/reqres_login_err"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:layout_gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqres_activity_login_ok"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>